syntax = "proto3";

package inventory.collector.v1;

option go_package = "inventory/collector/v1;collectorv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// InventoryCollectorService receives hardware inventory data and stores it.
service InventoryCollectorService {
  // SubmitInventory receives inventory from a client and stores it.
  rpc SubmitInventory(SubmitInventoryRequest) returns (SubmitInventoryResponse) {
    option (google.api.http) = {
      post: "/v1/inventories"
      body: "*"
    };
  }

  // GetInventory retrieves a stored inventory by ID.
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse) {
    option (google.api.http) = {
      get: "/v1/inventories/{id}"
    };
  }

  // ListInventories lists stored inventories with optional filters.
  rpc ListInventories(ListInventoriesRequest) returns (ListInventoriesResponse) {
    option (google.api.http) = {
      get: "/v1/inventories"
    };
  }

  // DeleteInventory removes a stored inventory by ID.
  rpc DeleteInventory(DeleteInventoryRequest) returns (DeleteInventoryResponse) {
    option (google.api.http) = {
      delete: "/v1/inventories/{id}"
    };
  }

  // GetLatestByHostname returns the most recent inventory for a hostname.
  rpc GetLatestByHostname(GetLatestByHostnameRequest) returns (GetLatestByHostnameResponse) {
    option (google.api.http) = {
      get: "/v1/inventories/latest/{hostname}"
    };
  }

  // StreamCommands opens a server-side stream that pushes commands to connected agents.
  rpc StreamCommands(StreamCommandsRequest) returns (stream InventoryCommand) {}

  // RefreshInventory sends a refresh command to a connected agent.
  rpc RefreshInventory(RefreshInventoryRequest) returns (RefreshInventoryResponse) {
    option (google.api.http) = {
      post: "/v1/inventories/refresh"
      body: "*"
    };
  }

  // ListConnectedAgents returns the currently connected agents.
  rpc ListConnectedAgents(ListConnectedAgentsRequest) returns (ListConnectedAgentsResponse) {
    option (google.api.http) = {
      get: "/v1/agents"
    };
  }
}

// Inventory holds the complete hardware inventory of a host.
message Inventory {
  google.protobuf.Timestamp collected_at = 1;
  string hostname = 2;
  string username = 3;
  VersionInfo smbios_version = 4;
  BIOSInfo bios = 5;
  SystemInfo system = 6;
  BaseboardInfo baseboard = 7;
  ChassisInfo chassis = 8;
  repeated ProcessorInfo processors = 9;
  repeated CacheInfo cache = 10;
  MemoryInfo memory = 11;
  repeated PortInfo ports = 12;
  repeated SlotInfo slots = 13;
  repeated string oem_strings = 14;
  BIOSLanguageInfo bios_language = 15;
  repeated MonitorInfo monitor = 16;
}

// VersionInfo holds the SMBIOS specification version.
message VersionInfo {
  int32 major = 1;
  int32 minor = 2;
  int32 revision = 3;
}

// BIOSInfo holds BIOS vendor, version, and release date (Type 0).
message BIOSInfo {
  string vendor = 1;
  string version = 2;
  string release_date = 3;
}

// SystemInfo holds system manufacturer, product, serial, and UUID (Type 1).
message SystemInfo {
  string manufacturer = 1;
  string product_name = 2;
  string version = 3;
  string serial_number = 4;
  string uuid = 5;
  string wake_up_type = 6;
  string sku_number = 7;
  string family = 8;
}

// BaseboardInfo holds baseboard/motherboard details (Type 2).
message BaseboardInfo {
  string manufacturer = 1;
  string product = 2;
  string version = 3;
  string serial_number = 4;
  string asset_tag = 5;
  string location_in_chassis = 6;
  string board_type = 7;
}

// ChassisInfo holds system enclosure/chassis details (Type 3).
message ChassisInfo {
  string manufacturer = 1;
  string version = 2;
  string serial_number = 3;
  string asset_tag_number = 4;
  string sku_number = 5;
}

// ProcessorInfo holds processor details (Type 4).
message ProcessorInfo {
  string socket_designation = 1;
  string manufacturer = 2;
  string version = 3;
  uint32 max_speed_mhz = 4;
  uint32 current_speed_mhz = 5;
  bool socket_populated = 6;
  string serial_number = 7;
  string asset_tag = 8;
  string part_number = 9;
  uint32 core_count = 10;
  uint32 core_enabled = 11;
  uint32 thread_count = 12;
}

// CacheInfo holds cache designation (Type 7).
message CacheInfo {
  string socket_designation = 1;
}

// MemoryInfo holds total physical memory and per-module details.
message MemoryInfo {
  uint64 total_physical_bytes = 1;
  double total_physical_gb = 2;
  PhysicalMemoryArray array = 3;
  repeated MemoryModule modules = 4;
}

// PhysicalMemoryArray holds the memory array metadata (Type 16).
message PhysicalMemoryArray {
  string location = 1;
  string use = 2;
  string error_correction = 3;
  string maximum_capacity = 4;
  uint32 number_of_memory_devices = 5;
}

// MemoryModule holds details for a single physical memory DIMM (Type 17).
message MemoryModule {
  string device_locator = 1;
  string bank_locator = 2;
  uint64 capacity_bytes = 3;
  string form_factor = 4;
  string memory_type = 5;
  string type_detail = 6;
  uint32 speed_mt_s = 7;
  uint32 configured_speed_mt_s = 8;
  string manufacturer = 9;
  string serial_number = 10;
  string asset_tag = 11;
  string part_number = 12;
  string minimum_voltage = 13;
  string maximum_voltage = 14;
  string configured_voltage = 15;
  string total_width = 16;
  string data_width = 17;
}

// PortInfo holds port connector details (Type 8).
message PortInfo {
  string internal_designator = 1;
  string external_designator = 2;
}

// SlotInfo holds system slot details (Type 9).
message SlotInfo {
  string designation = 1;
}

// BIOSLanguageInfo holds BIOS language settings (Type 13).
message BIOSLanguageInfo {
  string current_language = 1;
  repeated string installable_languages = 2;
}

// MonitorInfo holds connected display details.
message MonitorInfo {
  string manufacturer = 1;
  string model = 2;
  string serial_number = 3;
}

// --- RPC Messages ---

message SubmitInventoryRequest {
  Inventory inventory = 1;
}

message SubmitInventoryResponse {
  int64 id = 1;
  google.protobuf.Timestamp stored_at = 2;
}

message GetInventoryRequest {
  int64 id = 1;
}

message GetInventoryResponse {
  int64 id = 1;
  Inventory inventory = 2;
  google.protobuf.Timestamp stored_at = 3;
}

message ListInventoriesRequest {
  string hostname = 1;
  string username = 2;
  string system_uuid = 3;
  google.protobuf.Timestamp collected_after = 4;
  google.protobuf.Timestamp collected_before = 5;
  int32 page_size = 6;
  int32 page = 7;
}

message ListInventoriesResponse {
  repeated InventorySummary inventories = 1;
  int32 total_count = 2;
}

message InventorySummary {
  int64 id = 1;
  string hostname = 2;
  string username = 3;
  string system_uuid = 4;
  string system_serial = 5;
  google.protobuf.Timestamp collected_at = 6;
  google.protobuf.Timestamp stored_at = 7;
}

message DeleteInventoryRequest {
  int64 id = 1;
}

message DeleteInventoryResponse {}

message GetLatestByHostnameRequest {
  string hostname = 1;
}

message GetLatestByHostnameResponse {
  int64 id = 1;
  Inventory inventory = 2;
  google.protobuf.Timestamp stored_at = 3;
}

// --- Daemon / Streaming Messages ---

enum InventoryCommandType {
  INVENTORY_COMMAND_TYPE_REFRESH = 0;
}

message InventoryCommand {
  string command_id = 1;
  InventoryCommandType command_type = 2;
}

message StreamCommandsRequest {
  string client_id = 1;
  string client_version = 2;
}

message RefreshInventoryRequest {
  string hostname = 1;
}

message RefreshInventoryResponse {
  bool sent = 1;
  string command_id = 2;
}

message ListConnectedAgentsRequest {}

message ConnectedAgent {
  string client_id = 1;
  string version = 2;
  google.protobuf.Timestamp connected_at = 3;
}

message ListConnectedAgentsResponse {
  repeated ConnectedAgent agents = 1;
}
